--- a/.gitignore
+++ b/.gitignore
@@ -1,26 +1,29 @@
-# Python
-__pycache__/
-*.py[cod]
-*$py.class
-*.so
-.Python
-venv/
-env/
-ENV/
-.venv
+# Dependencies
+node_modules/
+.pnp
+.pnp.js
 
-# Ambiente
+# Testing
+coverage/
+
+# Production
+build/
+dist/
+
+# Environment
 .env
 .env.local
-.env.*.local
+.env.development.local
+.env.test.local
+.env.production.local
 
-# Downloads e Logs
-downloads/
-logs/
-data/
-*.log
+# Logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+lerna-debug.log*
 
-# IDEs
+# Editor
 .vscode/
 .idea/
 *.swp
@@ -31,15 +34,18 @@ data/
 .DS_Store
 Thumbs.db
 
-# Docker
-.dockerignore
+# Supabase
+.supabase/
+supabase/.temp/
 
-# Testes
-.pytest_cache/
-.coverage
-htmlcov/
+# Frontend
+frontend/node_modules/
+frontend/dist/
+frontend/.env.local
 
 # Arquivos temporários
-*.tmp
-*.bak
-*.swp
+*.xlsx
+*.xls
+LIMPEZA_PROJETO.md
+ESTRUTURA_FINAL.md
+
